client/src/Components/Homepage.css
*{
    margin:0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}

/* TEXT HOMEPAGE */

.formula_home {
    text-decoration: none;
    color:white;
    font-weight: bold;
}

.formula_home:hover {
    border: 1px solid #ed2021;
    background: #ed2021;
}


.anything h1{
    color:red;
}

.anything h3 {
    font-weight: bold;
    color:#e54726;
    text-decoration: underline;
    text-align: left;
}

/* LIKE USUAL */

.header {
    min-height: 100vh;
    width:100%;
    background-image: url('../assets/images/Untitled-1\ copy.jpg');
    /* background: url(photo/Untitled-1\ copy.jpg); */
    background-position: center;
    background-size:cover;
    position: relative;
}

a img{
    width:170px;
}

nav {
    /* display: flex;
    background: rgb(172, 162, 162);
    padding: 0% 6%;
    justify-content: space-between;
    align-items: center;
    z-index: 3; */

    position: fixed;
    width:100%;
    top:0;
    left:0;
    display:flex;
    justify-content: space-between;
    align-items: center;
    transition: 1s;
    padding: 0px 6%;
    /* padding-top: 10px; */
    z-index: 3;
    /* transition: 0.5s; */
}

nav.black{
    background: rgb(65, 62, 62);
}

.nav_links {
    flex:1;
    text-align: right;
}

.nav_links ul {
    position: relative;
    display: flex;
    justify-content:flex-start;
    padding: 0 6%;
}

.nav_links ul .Link{
    list-style: none;
    display: inline-block;
    position: relative;
    padding: 8px 12px;
    /* margin-right: 100px; */
    margin-top: 20px;
    text-decoration: none;
    color: white;
}

.nav_links ul .Link a {
    color:white;
    text-decoration: none;
    font-size: 15px;
}

.nav_links ul .Link::after{
    content:'';
    width:0%;
    height:2px;
    background: red;
    display:block;
    margin: auto;
    transition: 0.5s;
}

.nav_links ul .Link:hover::after{
    width: 100%;
}

.text-box {
    width:90%;
    color:#e9f389;
    position: absolute;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%);
    text-align: center;
}

.text-box h1{
    font-size: 62px;
}

.text-box p{
    margin: 10px 0 40px;
    font-size: 14px;
    color:white;
}

.learnNow {
    display: inline-block;
    text-decoration: none;
    color:white;
    border: 1px solid white;
    padding: 12px 34px;
    background: transparent;
    font-size: 20px;
    position: relative;
    cursor: pointer;
    transition: 1s;
}

.learnNow:hover {
    border: 1px solid #ed2021;
    background: #ed2021;

}

nav .fa-solid{
    display: none;
}


/* Formula */
.subFormula{
    display: none;
}

.nav_links ul {
    list-style-type: none;
}

.nav_links ul .Link:hover .subFormula {
    display: block;
    position:absolute;
    background: rgb(65, 62, 62);
    margin-left: -10px;
    text-align: left;

    /* border: 1px solid white; */
}

.nav_links ul .Link:hover .subFormula .Link{
    /* background-color: #e9f389; */
    width:max-content;
    margin-left: -15px;

}

.nav_links ul .Link:hover .subFormula ul {
    display: block;
    margin-left: -25px;
    /* margin-right: 100px; */
    padding-right: 100px;
}



/* .nav_links ul .Link:hover .subFormula ul .Link {
    background: transparent;
    border-bottom: 1px solid white;
    border-radius: 0;
} */

/* .nav_links ul .Link:hover .subFormula ul .Link:last-child {
    border-bottom: none;
} */








/* Formula */
/* .formula {
    position: absolute;
    background: #ed2021;
    height: 100vh;
    width: 200px;
    top: 0;
    right: -20px;
    text-align: left;
    z-index: 2;
    transition: 1s;
} */


@media(max-width:700px){
    .header{
        background-image: url('../assets/images/Untitled-1\ copy.jpg');
    }
    .text-box h1{
        font-size: 20px;
    }

    .nav_links ul .Link{
        display: block;
    }

    .nav_links{
        position: absolute;
        background: rgb(65, 62, 62);
        height: 100vh;
        width: 200px;
        top: 0;
        right: -200px;
        text-align: left;
        z-index: 2;
        transition: 1s;
    }

    .nav_links ul .Link::after{
        background:yellow;
    }


    nav .fa-solid {
        display: block;
        color: white;
        font-size: 22px;
        margin:10px;
        cursor: pointer;
    }

    .nav_links ul{
        padding: 30px;
        display:block;
    }

    .nav_links ul .Link:hover .subFormula {
        background: #ed2021;
    }

    .nav_links ul .Link:hover .subFormula ul{
        padding:0;
        padding-left: 20px;
        padding-right: 10px;
    }

    /* Version 2*/
    .nav_links2 {
        flex:1;
        text-align: right;
    }

    .nav_links2 ul{
        list-style-type: none;
    }

    .nav_links2 ul .Link{
        list-style: none;
        display: inline-block;
        position: relative;
        padding: 8px 12px;
        text-decoration: none;
        color: white;
    }

    .nav_links2 ul .Link a {
        color:white;
        text-decoration: none;
        font-size: 15px;
    }

    .nav_links2 ul .Link::after{
        content:'';
        width:0%;
        height:2px;
        background: red;
        display:block;
        margin: auto;
        transition: 0.5s;
    }

    .nav_links2 ul .Link:hover::after{
        width: 100%;
    }

    .nav_links2 ul .Link:hover .subFormula {
        display: block;
        position: absolute;
        background: rgb(65, 62, 62);
        margin-left: -42px;
        /* text-align: left; */
    }

    .nav_links2 ul .Link:hover .subFormula ul {
        display: block;
        margin: 10px;
        margin-left: -30px;

    }

    /* .nav_links2 ul .Link:hover .subFormula ul .Link {
        background: transparent;
        border-bottom: 1px solid white;
        text-align: left;
        border-radius: 0;
    }

    .nav_links2 ul .Link:hover .subFormula ul .Link:last-child {
        border-bottom: none;
    } */

    .nav_links2 ul .Link{
        display: block;
    }

    .nav_links2{
        position: absolute;
        background: rgb(65, 62, 62);
        height: 100vh;
        width: 200px;
        top: 0;
        right: 0;
        text-align: left;
        z-index: 2;
        transition: 1s;
    }

    .nav_links2 ul .Link::after{
        background:yellow;
    }

    .nav_links2 ul{
        padding: 30px;
        display:block;
    }

    .nav_links2 ul .Link:hover .subFormula {
        background: #e54726;
        margin-left: -42px;
        padding-right: 100px;
        z-index: 3;
    }

    .nav_links2 ul .Link:hover .subFormula ul{
        padding:0;
        padding-left: 20px;
        padding-right: 10px;
    }

    .nav_links2 ul .Link:hover .subFormula .Link{
        /* background-color: #e9f389; */
        width:fit-content;
        margin-left: 10px;


    }




}

/* ANYTHING */

.anything {
    width:80%;
    margin: auto;
    text-align: center;
}

h1{
    font-size: 36px;
    font-weight: 600;
}

.anything h1::after {
    content:'';
    width:100%;
    height:5px;
    background:#ed2021;
    display:block;
    margin:auto;
}

.anything p {
    font-size: 14px;
    font-weight: 300;
    line-height: 22px;
    padding: 5px;
    /* margin-bottom: 10px; */
    text-align: left;
    text-align: justify;
}

/* NearlyEnd */
.nearlyEnd {
    width: 100%;
    padding:40px;
    /* background-image: linear-gradient(#143ebe, #143ebe); */
    background-image: linear-gradient(#e54726, #e54726);
    text-align: center;
}

.nearlyEnd p {
    text-align: right;
    margin-top: -20px;
    margin-right: 100px;
    font-weight: 600;
    /* text-decoration:; */
}

.end {
    text-decoration: none;
    color:black;
    text-decoration: underline;
}

*{
    margin:0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}
.header {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;   /* Align children to the top */
    min-height: 100vh;
    width:100%;
    width: 100%;
    /* background-image: url('../assets/images/Untitled-1\ copy.jpg'); */
    background-position: center;
    background-size:cover;
    background-size: cover;
    position: relative;
}
a img{
    width:170px;
}
.mycontainer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
    overflow: hidden;
}

/* Andrew */
.A_formula {
    color: white;
}

